# rsserpent-plugin-cocoapods

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
rsserpent_plugin_cocoapods/: __init__.py  github_release.py  route.py
rsserpent_plugin_cocoapods/plugins/: admob.py  applovin.py  github_release.py
tests/: test_route.py
